# zenml-gitflow

./: .gitignore  .zenml_integration_requirements  1-1_Pipelines.ipynb  1-2_Artifact_Lineage.ipynb  2-1_Experiment_Tracking.ipynb  2-2_Local_Deployment.ipynb  Dockerfile  Makefile  README.md  build.py  deepchecks-zenml.Dockerfile  generate-data.py  local_gitflow_stack.yaml  local_run.py  production_run.py  project_config.yaml  promote.py  pyproject.toml  requirements-aws.in  requirements-aws.txt  requirements-base.in  requirements-gcp.in  requirements-gcp.txt  requirements-integrations.txt  requirements-local.in  requirements-prod.txt  requirements-staging.in  requirements-staging.txt  requirements.in  requirements.txt  run.py  run_local.py  run_production.py  run_staging.py  setup.sh  test.txt  visualizations.ipynb
.devcontainer/: devcontainer.json
.github/: trigger_zenml_pipeline.yaml
configs/: global_conf.py  local.yml  production.yml  staging.yml
pipeline/: dashboard_pipeline.py  training_pipeline.py
pipelines/: __init__.py  deployment.py  deployment_pipeline.py  development_pipeline.py  end_to_end.py  etl.py  prod.py  production_pipeline.py  staging_pipeline.py  training.py  training_pipeline.py
scripts/: bootstrap.sh  format.sh  lint.sh
stacks/: setup_aws_stack.sh  setup_local_stack.sh  setup_prod_stack.sh  setup_staging_stack.sh
steps/: __init__.py  analyze_data.py  clean_data.py  data_generators.py  data_loaders.py  data_preprocessors.py  data_validators.py  deepchecks_data_validator.py  deepchecks_data_validators.py  evaluators.py  evidently.py  (+13 more)
(+18 files in other folders)
